--- a/pages/prize.html
+++ b/pages/prize.html
@@ -15,7 +15,7 @@
 </a>
 
 <div class="align">
-<img src="../images/" height="610" width="170">
+<img src="../images/boobs.jpg" height="710" width="810">
 </div>
 
 </body>
